--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -98,6 +98,7 @@ layout: base
     branch: '{{site.github.source.branch}}',
     path:   '{{ page.path }}'
   }
+  let imageServiceUrl = 'https://d1co2zgwaj21sl.cloudfront.net/image';
   document.querySelectorAll('.post-image').forEach((el) => {
     if (el.dataset?.src) {
       if (el.dataset?.src.startsWith('wc:') || el.dataset?.src.startsWith('http')) {
